--- a/src/ui/component/dialog/ReportDialog.pug
+++ b/src/ui/component/dialog/ReportDialog.pug
@@ -84,7 +84,7 @@ style.
 	.report-menu-rule-button
 		display none
 	.report-menu-rule-gradient-fade
-		background linear-gradient(to top, var(--c-subreddit-theme) 0px, transparent)
+		background linear-gradient(to top, var(--c-bg) 0px, transparent)
 		bottom 0
 		height 37%
 		left 0
