--- a/src/ui/component/global/AllGlobals.pug
+++ b/src/ui/component/global/AllGlobals.pug
@@ -2,10 +2,10 @@ script.
 	import GlobalAccountGateway from './GlobalAccountGateway.pug'
 	import GlobalNetworkStatus from './GlobalNetworkStatus.pug'
 	import GlobalRadialMenu from './GlobalRadialMenu.pug'
-	import GlobalThemeColor from './GlobalThemeColor.pug'
+	import GlobalThemeColors from './GlobalThemeColors.pug'
 
 GlobalAccountGateway
-	GlobalThemeColor
+	GlobalThemeColors
 		GlobalNetworkStatus
 			GlobalRadialMenu
 				slot
