--- a/src/ui/component/post/PostTag.pug
+++ b/src/ui/component/post/PostTag.pug
@@ -17,9 +17,10 @@ style.
 		border-radius 999px
 		font-feature-settings 'cpsp', 'ss01'
 		font-size 10px
-		font-weight bold
+		font-weight var(--f-wght-strong)
 		line-height 1
 		letter-spacing 1px
+		height 20px
 		padding 5px 10px
 		text-transform uppercase
 		user-select none
