--- a/src/ui/component/shared/Button.pug
+++ b/src/ui/component/shared/Button.pug
@@ -44,8 +44,8 @@ script.
 style.
 	.button
 		align-items center
-		background var(--c-blend-normal)
-		border 1px solid transparent
+		background none
+		border 1px solid
 		border-radius 0.5em
 		display inline-flex
 		gap 5px
@@ -63,6 +63,8 @@ style.
 			background #333
 			border-color var(--c-hint-normal)
 			color var(--c-hint-normal)
+		:global(.button-frame &)
+			border-color transparent
 	.button-badge
 		border-radius 10px
 		background var(--c-con-strong)
@@ -71,7 +73,9 @@ style.
 		padding 0 1ch
 	.button-dropdown
 		font inherit
-		padding-top 2px
+		padding-bottom 2px
+		padding-left 4px
+		padding-top 0
 	.button-dropdown-option
 		background var(--c-subreddit-theme)
 		color var(--c-subreddit-theme-text)
