--- a/src/ui/component/shared/TextInput.pug
+++ b/src/ui/component/shared/TextInput.pug
@@ -33,10 +33,12 @@ label.text-input-label
 style.
 	.text-input
 		border-bottom 2px solid var(--c-text-faint)
-		flex 1 1 auto
 		font-size 18px
+		font-weight bold
+		padding 0 5px
+		width 240px
 		&:focus
-			border-color var(--c-hint-normal)
+			border-color var(--c-text-strong)
 			outline none
 	.text-input-label
 		align-items center
