--- a/src/ui/component/shared/Warning.pug
+++ b/src/ui/component/shared/Warning.pug
@@ -11,9 +11,9 @@ script.
 
 style.
 	.warning
-		background darkkhaki
+		background lightgoldenrodyellow
 		border-radius 10px
-		color white
+		color black
 		max-width 560px
 		padding 10px
 		width 100%
