--- a/src/ui/component/post/PostFlair.pug
+++ b/src/ui/component/post/PostFlair.pug
@@ -41,7 +41,7 @@ style.
 		display inline-flex
 		font-feature-settings 'calt', 'cpsp', 'ss01'
 		font-size 10px
-		font-weight bold
+		font-weight var(--f-wght-strong)
 		gap 5px
 		height 20px
 		letter-spacing 1px
@@ -51,4 +51,5 @@ style.
 		user-select none
 	.post-flair-emoji
 		height 16px
+		margin 0 1px
 		margin-top -3px !important
