--- a/src/ui/component/shared/ButtonGroup.pug
+++ b/src/ui/component/shared/ButtonGroup.pug
@@ -5,14 +5,12 @@ script.
 	export options = []
 	export selected = null
 
-fieldset.button-group
-	{#each options as option, i}
+menu.button-group
+	{#each options as option}
 		Button(action={() => action ? action(option.value) : option.action(option.value)} activated={selected === option.value} disabled={option.disabled} link={option.link} text={option.label})
 
 style.
 	.button-group
-		border 0
 		display inline-flex
 		flex-flow row wrap
-		gap 2px
-		padding 0
+		gap 5px
