--- a/src/ui/component/shared/Popup.pug
+++ b/src/ui/component/shared/Popup.pug
@@ -26,9 +26,10 @@ style.
 		width 100dvw
 		z-index 10
 	.popup-body
-		background var(--c-subreddit-theme)
+		background var(--c-bg)
 		border-radius 12px
 		box-shadow 0 0 24px var(--c-blend-normal)
+		color var(--c-text-strong)
 		max-height 96dvh
 		max-width 700px
 		overflow auto
