--- a/src/ui/component/subreddit/SubredditInfo.pug
+++ b/src/ui/component/subreddit/SubredditInfo.pug
@@ -24,12 +24,12 @@ aside.subreddit-info
 			FormattedHTML(html={subreddit.public_description_html})
 		{#if false}
 			section.subreddit-info-metrics
-				{#if subreddit.accounts_active}
-					data 🟢 {subreddit.accounts_active.toLocaleString('en-US')}
-				{#if subreddit.subscribers}
-					data 👂 {subreddit.subscribers.toLocaleString('en-US')}
 				data 🔑 {subreddit.subreddit_type[0].toUpperCase() + subreddit.subreddit_type.slice(1)}
 				time(title={Time.sToAbsTimeStr(subreddit.created_utc)}) 🏗️ {new Date(Time.sToMs(subreddit.created_utc)).getFullYear()}
+				{#if subreddit.subscribers}
+					data 👂 {subreddit.subscribers.toLocaleString('en-US')}
+				{#if subreddit.accounts_active}
+					data 🟢 {subreddit.accounts_active.toLocaleString('en-US')}
 	{#if widgets}
 		ol.subreddit-info-widgets
 			{#each widgets.sidebar.filter(x => !(x.kind === 'post-flair' || x.kind === 'subreddit-rules')) as widget}
@@ -40,7 +40,7 @@ style.
 		display flex
 		flex-flow column nowrap
 		gap 2em
-		margin-top 2em
+		width 320px
 	.subreddit-info-metrics
 		display flex
 		font-feature-settings 'ss01', 'tnum'
